[package]
name = "dirload-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts = "0.2"
log = "0.4.17"
simplelog = "0.12.1"
dirs = "5.0.1"
walkdir = "2.4.0"
rand = "0.8.5"
time = { version = "0.3.31", features = ["formatting"] }
libc = "0.2.152"
